--- a/AverageDistanceUnitSquare.ipynb
+++ b/AverageDistanceUnitSquare.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# Average distance between two random points in a unit square\n",
-    "Sympy could not complete the analytical integration"
+    "Sympy originally could not complete the analytical integration, but now it does. \n",
+    "Removed all irrelevant manipulations."
    ]
   },
   {
@@ -26,6 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Likelihood of length x in unit interval is given by 2*(1-x).\n",
+    "# Geometric reasoning: starting point for length x within unit interval can be anywhere between 0 and (1-x). \n",
+    "# A length could be oriented left to right or right to left, giving a factor of 2. \n",
     "WeightedDistance = 4*(1-x)*(1-y)*sqrt(x*x + y*y)"
    ]
   },
@@ -114,592 +118,6 @@
    "source": [
     "AverageDistance.evalf()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
-      ],
-      "text/plain": [
-       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AverageDistance.expand().doit()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "SymPy cannot evaluate the definite integral symbolically (Axiom can handle it)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
-      ],
-      "text/plain": [
-       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AverageDistance.subs(asinh(1/y),log(1/y + sqrt(1+1/(y*y))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AveDistExpanded = expand(AverageDistance)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
-      ],
-      "text/plain": [
-       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AveDistExpanded"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
-      ],
-      "text/plain": [
-       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AveDistExpanded.doit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\int y^{2} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy$"
-      ],
-      "text/plain": [
-       "Integral(y**2*asinh(1/y), y)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "integrate(y*y * asinh(1/y),y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = y*y * (1-y) * asinh(1/y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle y^{2} \\cdot \\left(1 - y\\right) \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}$"
-      ],
-      "text/plain": [
-       "y**2*(1 - y)*asinh(1/y)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\int y^{2} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy - \\int y^{3} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy$"
-      ],
-      "text/plain": [
-       "Integral(y**2*asinh(1/y), y) - Integral(y**3*asinh(1/y), y)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "integrate(f,y).doit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\int\\limits_{0}^{1} y^{3} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy - \\int\\limits_{0}^{1} \\left(- y^{2} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\right)\\, dy$"
-      ],
-      "text/plain": [
-       "-Integral(y**3*asinh(1/y), (y, 0, 1)) - Integral(-y**2*asinh(1/y), (y, 0, 1))"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "integrate(f, (y,0,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "limit(f,y,0).doit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g = y*y*(1-y) * log(1/y + sqrt(1+1/(y*y)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle y^{2} \\cdot \\left(1 - y\\right) \\log{\\left(\\sqrt{1 + \\frac{1}{y^{2}}} + \\frac{1}{y} \\right)}$"
-      ],
-      "text/plain": [
-       "y**2*(1 - y)*log(sqrt(1 + y**(-2)) + 1/y)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "integrate(g,(y,0,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g1 = y*y * log(1/y + sqrt(1+1/(y*y)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle y^{2} \\log{\\left(\\sqrt{1 + \\frac{1}{y^{2}}} + \\frac{1}{y} \\right)}$"
-      ],
-      "text/plain": [
-       "y**2*log(sqrt(1 + y**(-2)) + 1/y)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\int y^{2} \\log{\\left(\\sqrt{1 + \\frac{1}{y^{2}}} + \\frac{1}{y} \\right)}\\, dy$"
-      ],
-      "text/plain": [
-       "Integral(y**2*log(sqrt(1 + y**(-2)) + 1/y), y)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "integrate(g1,y)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For integrating substitute u = 1/y and du = -1/(y*y) dy; y = 0..1 becomes u = oo..1\n",
-    "du = -u*u dy, hence dy = -1/(u*u) du"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u = symbols(\"u\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f1u = 1/(u*u) * asinh(u) * (-1)/(u*u)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\frac{\\operatorname{asinh}{\\left(u \\right)}}{u^{4}}$"
-      ],
-      "text/plain": [
-       "-asinh(u)/u**4"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f1u"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\int\\limits_{1}^{\\infty} \\frac{\\operatorname{asinh}{\\left(u \\right)}}{u^{4}}\\, du$"
-      ],
-      "text/plain": [
-       "-Integral(asinh(u)/u**4, (u, 1, oo))"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "integrate(f1u,(u,1,oo))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\int \\frac{\\operatorname{asinh}{\\left(u \\right)}}{u^{4}}\\, du$"
-      ],
-      "text/plain": [
-       "-Integral(asinh(u)/u**4, u)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "integrate(f1u,u)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g1u = 1/(u*u*u*u) * log(u+sqrt(u*u+1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{\\log{\\left(u + \\sqrt{u^{2} + 1} \\right)}}{u^{4}}$"
-      ],
-      "text/plain": [
-       "log(u + sqrt(u**2 + 1))/u**4"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g1u"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\int \\frac{\\log{\\left(u + \\sqrt{u^{2} + 1} \\right)}}{u^{4}}\\, du$"
-      ],
-      "text/plain": [
-       "Integral(log(u + sqrt(u**2 + 1))/u**4, u)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "integrate(g1u,u)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\int\\limits_{1}^{\\infty} \\frac{\\log{\\left(u + \\sqrt{u^{2} + 1} \\right)}}{u^{4}}\\, du$"
-      ],
-      "text/plain": [
-       "Integral(log(u + sqrt(u**2 + 1))/u**4, (u, 1, oo))"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "integrate(g1u,(u,1,oo))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0.382597858232106$"
-      ],
-      "text/plain": [
-       "0.382597858232106"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "_.evalf()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle y^{2} \\log{\\left(\\sqrt{1 + \\frac{1}{y^{2}}} + \\frac{1}{y} \\right)}$"
-      ],
-      "text/plain": [
-       "y**2*log(sqrt(1 + y**(-2)) + 1/y)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AveDistExpanded_done = AveDistExpanded.doit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
-      ],
-      "text/plain": [
-       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AveDistExpanded_done"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
